# libuvc

./: CMakeLists.txt
src/: stream.c
